kubernetes/xrootd/kube/yamls/ucsd-sub3-host1-t3-fabric-ucsd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ucsd-sub3-host1-t3-fabric-ucsd
  namespace: opennsa
  labels:
    k8s-app: ucsd-sub3-host1-t3-fabric-ucsd
spec:
  selector:
    matchLabels:
      k8s-app: ucsd-sub3-host1-t3-fabric-ucsd
  template:
    metadata:
      labels:
        k8s-app: ucsd-sub3-host1-t3-fabric-ucsd
    spec:
      nodeSelector:
        nautilus.io/ipv6: "true"
      containers:
      - env:
        - name: XRD_ENDPOINT
          value: ucsd-sub3-host1.exp.fabric-testbed.net:1094
        - name: X509_USER_PROXY
          value: /etc/xcache-proxy/x509-proxy
        - name: XRD_PROTOCOLS
          value: davs,https
        - name: XRD_MODES
          value: read,write,delete
        - name: XRD_WORKDIR
          value: /srv/
        - name: XRD_PATH
          value: /store/temp/user/sense/kube-xrootd-test
        - name: XRD_UNIQ_NAME
          value: ucsd-sub3-host1.exp.fabric-testbed.net
        - name: XRD_UNIQ_WRITE
          value: 'True'
        image: sdnsense/xrootd-mon:latest
        imagePullPolicy: Always
        name: ucsd-sub3-host1-t3-fabric-ucsd
        ports:
        - containerPort: 8000
        resources:
          limits:
            cpu: 1
            memory: 1Gi
          requests:
            cpu: 1
            memory: 1Gi
        volumeMounts:
        - mountPath: /etc/xcache-proxy
          name: xcache-proxy
      volumes:
      - name: xcache-proxy
        secret:
          defaultMode: 384
          secretName: xcache-proxy
---
apiVersion: v1
kind: Service
metadata:
  namespace: opennsa
  labels:
    k8s-app: ucsd-sub3-host1-t3-fabric-ucsd
  name: ucsd-sub3-host1-t3-fabric-ucsd
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    k8s-app: ucsd-sub3-host1-t3-fabric-ucsd
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: opennsa
  annotations:
    kubernetes.io/ingress.class: haproxy
  name: ucsd-sub3-host1-t3-fabric-ucsd
spec:
  rules:
  - host: ucsd-sub3-host1-t3-fabric-ucsd.nrp-nautilus.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ucsd-sub3-host1-t3-fabric-ucsd
            port:
              number: 8000
